style the side menu margin to prevent icon wrap

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -135,9 +135,10 @@ input{
   border-radius: 0px !important;
 }
 
-.well{
+.well-sm{
 	border-radius: 0px;
 	border-width:0px;
-	padding:30px;
-	
+	padding:20px;
+    box-shadow: 0;
+    background-color: #f5f5f5;
 }
