--- a/app/assets/stylesheets/nav_page.scss
+++ b/app/assets/stylesheets/nav_page.scss
@@ -9,7 +9,7 @@
 	}
 
 	p {
-		font-size: 14px;
+		font-size: 16px;
 		color: #333;
 	}
 
